# glance

./: .gitignore  CHANGELOG.md  LICENSE  PRD.md  README.md  TASKS.md  USER_JOURNEY.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: clipboard.rs  connection.rs  mod.rs  schema.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/db/: cache.rs  mod.rs  sqlserver.rs
src/components/: ConnectionForm.tsx  EmptyState.tsx  GroupList.tsx  IndexingProgress.tsx  JoinQueryBuilder.tsx  KeyboardShortcutsHelp.tsx  PreviewPanel.tsx  RecentList.tsx  ResultItem.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: useSearch.ts
src/lib/: fuzzySearch.ts  groupsParser.ts  sqlGenerator.ts  tauri.ts  types.ts
src/stores/: connectionStore.ts  historyStore.ts  joinQueryStore.ts  schemaStore.ts  searchStore.ts  settingsStore.ts
