[package]
name = "glance-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glance_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
tiberius = { version = "0.12", default-features = false, features = ["tokio", "tds73"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Local cache
rusqlite = { version = "0.32", features = ["bundled"] }

# OS paths and utilities  
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# Clipboard
arboard = "3"

# Global hotkey
tauri-plugin-global-shortcut = "2"
